build.log.txt
Generating code snapshot in ./llms.txt ...
╭──────────────────── CodeToPrompt ────────────────────╮
│ Configuration for this run:                          │
│ Root Directory:                                      │
│ /Users/adam/Developer/vcs/github.twardoch/pub/svgn   │
│ Include Patterns: ['*']                              │
│ Exclude Patterns: ['*.svg', '.specstory', '*.md',    │
│ '*.txt', 'ref', 'testdata', '*.lock']                │
│ Respect .gitignore: True                             │
│ Show Line Numbers: False                             │
│ Count Tokens: True                                   │
│ Compress Code: True                                  │
│ Max Tokens: Unlimited                                │
│ Tree Depth: 5                                        │
│ Output Format: default                               │
│ Interactive Mode: False                              │
╰──────────────────────────────────────────────────────╯

╭──────────────── Processing Complete ─────────────────╮
│ Summary:                                             │
│ Files Processed: 108                                 │
│ Total Tokens: 69,712                                 │
│ Output Destination: llms.txt                         │
│                                                      │
│ Top 3 Files by Tokens:                               │
│   - svgn/src/collections.rs (5,362 tokens)           │
│   - svgn/src/plugins/remove_unknowns_and_defaults.rs │
│ (4,955 tokens)                                       │
│   - svgn/src/plugins/cleanup_list_of_values.rs       │
│ (3,957 tokens)                                       │
│                                                      │
│ Top 5 Extensions by Tokens:                          │
│   - .rs (51,332 tokens)                              │
│   - .sh (8,606 tokens)                               │
│   - .yml (2,968 tokens)                              │
│   - .bak (2,786 tokens)                              │
│   - .cmd (2,652 tokens)                              │
╰──────────────────────────────────────────────────────╯
Building the svgn project...
   Compiling svgn v1.2.3 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
warning: unused imports: `SelectorImpl` and `Selector`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:12:25
   |
12 | use selectors::parser::{Selector, SelectorImpl};
   |                         ^^^^^^^^  ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `AttrSelectorOperation`, `CaseSensitivity`, and `NamespaceConstraint`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:13:23
   |
13 | use selectors::attr::{AttrSelectorOperation, CaseSensitivity, NamespaceConstraint};
   |                       ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ElementSelectorFlags`, `MatchingContext`, `MatchingMode`, and `matches_selector_list`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:14:27
   |
14 | use selectors::matching::{matches_selector_list, MatchingContext, MatchingMode, ElementSelectorFlags};
   |                           ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `selectors::NthIndexCache`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:15:5
   |
15 | use selectors::NthIndexCache;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cssparser::ToCss`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:16:5
   |
16 | use cssparser::ToCss;
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `MatchingContext`
   --> svgn/src/plugins/inline_styles_selector.rs:452:31
    |
452 |     use selectors::matching::{MatchingContext, MatchingMode, QuirksMode, NeedsSelectorFlags, MatchingForInvalidation};
    |                               ^^^^^^^^^^^^^^^

warning: unused import: `SelectorImpl`
  --> svgn/src/plugins/inline_styles.rs:27:39
   |
27 | use selectors::parser::{SelectorList, SelectorImpl};
   |                                       ^^^^^^^^^^^^

error[E0277]: the trait bound `SvgIdentifier: precomputed_hash::PrecomputedHash` is not satisfied
   --> svgn/src/plugins/inline_styles_selector.rs:156:23
    |
156 |     type Identifier = SvgIdentifier;
    |                       ^^^^^^^^^^^^^ the trait `precomputed_hash::PrecomputedHash` is not implemented for `SvgIdentifier`
    |
    = help: the following other types implement trait `precomputed_hash::PrecomputedHash`:
              &'a T
              &'a mut T
note: required by a bound in `selectors::SelectorImpl::Identifier`
   --> /Users/adam/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/selectors-0.30.0/parser.rs:263:1
    |
263 | / with_bounds! {
264 | |     [Clone + Eq]
265 | |     [for<'a> From<&'a str>]
266 | | }
    | |_^ required by this bound in `SelectorImpl::Identifier`
    = note: this error originates in the macro `with_all_bounds` which comes from the expansion of the macro `with_bounds` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SvgLocalName: precomputed_hash::PrecomputedHash` is not satisfied
   --> svgn/src/plugins/inline_styles_selector.rs:157:22
    |
157 |     type LocalName = SvgLocalName;
    |                      ^^^^^^^^^^^^ the trait `precomputed_hash::PrecomputedHash` is not implemented for `SvgLocalName`
    |
    = help: the following other types implement trait `precomputed_hash::PrecomputedHash`:
              &'a T
              &'a mut T
note: required by a bound in `selectors::SelectorImpl::LocalName`
   --> /Users/adam/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/selectors-0.30.0/parser.rs:263:1
    |
263 | / with_bounds! {
264 | |     [Clone + Eq]
265 | |     [for<'a> From<&'a str>]
266 | | }
    | |_^ required by this bound in `SelectorImpl::LocalName`
    = note: this error originates in the macro `with_all_bounds` which comes from the expansion of the macro `with_bounds` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SvgNamespaceUrl: precomputed_hash::PrecomputedHash` is not satisfied
   --> svgn/src/plugins/inline_styles_selector.rs:159:25
    |
159 |     type NamespaceUrl = SvgNamespaceUrl;
    |                         ^^^^^^^^^^^^^^^ the trait `precomputed_hash::PrecomputedHash` is not implemented for `SvgNamespaceUrl`
    |
    = help: the following other types implement trait `precomputed_hash::PrecomputedHash`:
              &'a T
              &'a mut T
note: required by a bound in `selectors::SelectorImpl::NamespaceUrl`
   --> /Users/adam/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/selectors-0.30.0/parser.rs:263:1
    |
263 | / with_bounds! {
264 | |     [Clone + Eq]
265 | |     [for<'a> From<&'a str>]
266 | | }
    | |_^ required by this bound in `SelectorImpl::NamespaceUrl`
    = note: this error originates in the macro `with_all_bounds` which comes from the expansion of the macro `with_bounds` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `precomputed_hash`
  --> svgn/src/plugins/inline_styles_selector.rs:75:6
   |
75 | impl precomputed_hash::PrecomputedHash for SvgIdentifier {
   |      ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `precomputed_hash`
   |
   = help: if you wanted to use a crate named `precomputed_hash`, use `cargo add precomputed_hash` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `precomputed_hash`
  --> svgn/src/plugins/inline_styles_selector.rs:85:6
   |
85 | impl precomputed_hash::PrecomputedHash for SvgLocalName {
   |      ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `precomputed_hash`
   |
   = help: if you wanted to use a crate named `precomputed_hash`, use `cargo add precomputed_hash` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `precomputed_hash`
  --> svgn/src/plugins/inline_styles_selector.rs:95:6
   |
95 | impl precomputed_hash::PrecomputedHash for SvgNamespaceUrl {
   |      ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `precomputed_hash`
   |
   = help: if you wanted to use a crate named `precomputed_hash`, use `cargo add precomputed_hash` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0277, E0433.
For more information about an error, try `rustc --explain E0277`.
warning: `svgn` (lib) generated 7 warnings
error: could not compile `svgn` (lib) due to 6 previous errors; 7 warnings emitted
